# adversarial-safeguards

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  Makefile  PROJECT_STATUS.md  PROPOSAL.md  README.md  prereg.md  prereg_commit.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/attacks/: benign-lora-10.yaml  benign-lora-100.yaml  benign-lora-1000.yaml  lora-a1-10.yaml  lora-a1-100.yaml  lora-a1-1000.yaml  no-attack.yaml  pap.yaml  roleplay.yaml
configs/defenses/: constitution.txt  d0-baseline.yaml  d1-llama-guard-input.yaml  d2-llama-guard-output.yaml  d3-constitutional.yaml  d4-combined.yaml
configs/evals/: harmbench.yaml  mt-bench.yaml  strongreject.yaml  xstest.yaml
configs/experiments/: pilot.yaml  sweep.yaml
configs/models/: deepseek-r1-distill-qwen-14b.yaml  gemma-3-27b.yaml  llama-3.1-8b.yaml  qwen-3-32b.yaml
docs/: ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  CONTRIBUTION_STRATEGY.md  ETHICS.md  REPRODUCIBILITY.md  STATISTICAL_RIGOR.md  TIMELINES.md
paper/: Makefile  README.md  main.tex  references.bib
scripts/: download_datasets.sh  download_models.sh  download_models_mlx.sh  generate_sweep_cells.py  launch_aws.sh  launch_lambda.sh  setup_env.sh
src/advsafe/: __init__.py  types.py
src/advsafe/analysis/: __init__.py  ace.py  figures.py  novel_metrics.py  power.py  statistics.py
src/advsafe/attacks/: __init__.py  base.py  lora_finetune.py  no_attack.py  pap.py  roleplay.py  templates.py
src/advsafe/defenses/: __init__.py  base.py  baseline.py  combined.py  constitutional_prompt.py  llama_guard_input.py  llama_guard_output.py
src/advsafe/evals/: __init__.py  base.py  harmbench.py  mmlu.py  mt_bench.py  strongreject.py  xstest.py
src/advsafe/judges/: __init__.py  base.py  llama_guard.py  openai_judge.py
src/advsafe/models/: __init__.py  loader.py  mlx_backend.py  registry.py
src/advsafe/runners/: __init__.py  benchmark.py  pilot.py  preflight.py  report.py  run_experiment.py  smoke_test.py  sweep.py  validate.py
src/advsafe/utils/: __init__.py  device.py  logging.py  seeds.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_ace.py  test_attacks.py  test_benchmark.py  test_config_from_dict.py  test_configs.py  test_constitutional_defense.py  test_evals.py  test_mlx_backend.py  test_no_attack.py  test_novel_metrics.py  test_power.py  test_registries.py  test_report_ace_cost.py  test_report_corrections.py  test_statistics.py  test_types.py  test_utils.py
