[project]
name = "advsafe"
version = "0.1.0"
description = "Adversarial Safeguards — empirical audit of safeguard robustness in open-weight LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rohan V. Mehra", email = "rohanvmehra4@gmail.com"}]
keywords = ["ai-safety", "red-teaming", "llm", "adversarial", "alignment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "accelerate>=1.1.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.5",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    # Pinned to match .pre-commit-config.yaml and CI so "clean locally" == "clean in CI".
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
]
cuda = [
    "bitsandbytes>=0.44.0",
    "flash-attn>=2.6.0; sys_platform == 'linux'",
]
mps = []
openai = [
    "openai>=1.50.0",
]
viz = [
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
]

[project.scripts]
advsafe-smoke = "advsafe.runners.smoke_test:cli"
advsafe-run = "advsafe.runners.run_experiment:cli"
advsafe-pilot = "advsafe.runners.pilot:cli"
advsafe-sweep = "advsafe.runners.sweep:cli"
advsafe-validate = "advsafe.runners.validate:cli"
advsafe-preflight = "advsafe.runners.preflight:cli"
advsafe-benchmark = "advsafe.runners.benchmark:cli"
advsafe-report = "advsafe.runners.report:cli"

[project.urls]
Homepage = "https://github.com/rohanvmehra4/adversarial-safeguards"
Repository = "https://github.com/rohanvmehra4/adversarial-safeguards"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advsafe"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "results", "checkpoints"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C4", "SIM", "RET"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the src/ layout on sys.path so `pytest` runs without an editable install.
# This matters for local dev on a box where the heavy ML stack — and thus an
# editable install of advsafe — isn't available (e.g. Python 3.14, which has no
# torch wheels yet). CI still runs `pip install -e .`, for which this is a no-op.
pythonpath = ["src"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "ml_stack: requires torch/transformers/peft importable; auto-skipped if torch is absent",
]

[tool.coverage.run]
source = ["src/advsafe"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
